# contoso-finance

./: .gitignore  .prettierignore  README.md  ROADMAP.md  TEMPLATE.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/client/: package.json  tsconfig.test.json  vitest.config.ts
apps/client/src/: App.css  App.tsx  main.tsx  router.tsx  theme.ts
apps/client/src/api/__tests__/: apiClient.test.ts
apps/client/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/client/src/components/__tests__/: Header.test.tsx
apps/client/src/features/billing/: BillingPage.tsx
apps/client/src/features/dashboard/: DashboardPage.tsx
apps/client/src/features/payments/: PaymentsPage.tsx
apps/client/src/hooks/: useApi.ts
apps/server/: package.json  pyproject.toml  ruff.toml
apps/server/alembic/: env.py
apps/server/src/contoso_finance/: main.py
apps/server/src/contoso_finance/domains/billing/: router.py  schemas.py
apps/server/src/contoso_finance/domains/payments/: router.py  schemas.py
apps/server/src/contoso_finance/domains/reporting/: models.py  router.py  schemas.py
apps/server/src/contoso_finance/domains/settlements/: models.py  repository.py  router.py  schemas.py
apps/server/src/contoso_finance/shared/types/: common.py
apps/server/tests/: conftest.py
docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml
excalidraw/scripts/: export-excalidraw.js
scripts/: dev.js
skills/fluent-ui/: SKILL.md
skills/git-workflow/: SKILL.md
skills/visuals/: SKILL.md
(+3 files in other folders)
