[project]
name = "contoso-finance-server"
version = "0.1.0"
description = "Contoso Finance backend — FastAPI modular monolith"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
